Adjusted dark mode

--- a/app/src/main/res/layout/item_home_list.xml
+++ b/app/src/main/res/layout/item_home_list.xml
@@ -23,7 +23,7 @@
         android:layout_marginStart="@dimen/space_16"
         android:fontFamily="@font/anaheim"
         android:text="Name"
-        android:textColor="@color/black"
+        android:textColor="?android:textColorPrimary"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@id/homeItemImage"
         app:layout_constraintStart_toEndOf="@id/homeItemImage"
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/space_16"
         android:text="20"
-        android:textColor="@color/black"
+        android:textColor="?android:textColorPrimary"
         android:textSize="@dimen/font_20"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="@id/homeItemImage"
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/space_16"
         android:text="2"
-        android:textColor="@color/black"
+        android:textColor="?android:textColorPrimary"
         android:textSize="@dimen/font_20"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/homeGameScore"
