--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="old_burgundy">#3e2a35</color>
     <color name="terra_cotta">#e26d5a</color>
     <color name="lilac_uster">#c5aab9</color>
+
+    <color name="cadet">#57737A</color>
+    <color name="opal">#a6bec4</color>
 </resources>
