--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.TMGChallenge" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="fontFamily">@font/anaheim</item>
-        <item name="colorPrimary">@color/khaki_web</item>
-        <item name="colorPrimaryVariant">@color/champagne_pink</item>
+        <item name="colorPrimary">@color/cadet</item>
+        <item name="colorPrimaryVariant">@color/opal</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorSecondary">@color/old_burgundy</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
