--- a/app/src/main/res/layout/fragment_match_insert.xml
+++ b/app/src/main/res/layout/fragment_match_insert.xml
@@ -56,6 +56,7 @@
             android:layout_marginEnd="@dimen/space_16"
             android:layout_height="wrap_content"
             android:inputType="number"
+            android:maxLength="2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/mainPlayerSpinner"
             app:layout_constraintTop_toBottomOf="@+id/mainPlayerSpinner" />
@@ -116,6 +117,7 @@
             android:layout_marginEnd="@dimen/space_16"
             android:layout_height="wrap_content"
             android:inputType="number"
+            android:maxLength="2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/secondPlayerSpinner"
             app:layout_constraintTop_toBottomOf="@+id/secondPlayerSpinner" />
