--- a/app/src/main/res/layout/fragment_player_insert.xml
+++ b/app/src/main/res/layout/fragment_player_insert.xml
@@ -10,6 +10,7 @@
         android:layout_height="40dp"
         android:layout_margin="@dimen/space_16"
         android:gravity="center|start"
+        android:maxLength="10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
